fix: aligning the notification popup to top right

--- a/src/assets/css/components/pages/Notification.css
+++ b/src/assets/css/components/pages/Notification.css
@@ -10,6 +10,9 @@
     font-family: sans-serif;
     font-size: 14px;
     margin: auto;
+    position: absolute;
+    right: 20px;
+    top: 20px;
 }
 .NotificationContainer img{
     margin: -18px -6px 0px 0px;
